Firt part of auth flow implementation
