# src/types/user.ts
@@ -1,4 +1,6 @@
-export interface UserRequestData {
+import { UserRole } from './authorization';
+
+export interface UserRequest {
   /**
    * @format email
    * @pattern ^[a-zA-Z0-9_.+-]+\x40[a-zA-Z0-9-]+\.[a-zA-Z0-9-.]+$
@@ -8,14 +10,23 @@ export interface UserRequestData {
    * @minLength 1
    */
   name: string;
+  role: UserRole;
+  /**
+   * @minLength 1
+   */
+  password?: string;
 }
 
-type UserRequestKeys = (keyof UserRequestData)[];
+export interface UserCreateRequest extends UserRequest {
+  password: string;
+}
 
-export const USER_REQUEST_KEYS: UserRequestKeys = [ 'email', 'name' ];
-
-export interface UserAttributes extends UserRequestData {
+export interface UserAttributes extends UserRequest {
   _id: any;
   createdAt: Date;
   updatedAt: Date;
 }
+
+type UserRequestKeys = (keyof UserRequest)[];
+
+export const USER_REQUEST_KEYS: UserRequestKeys = [ 'email', 'name', 'role', 'password' ];
